--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,10 @@ plugins:
   - jekyll-sitemap
   - jekyll-feed
   - jekyll-katex
+markdown: kramdown
+kramdown:
+  input: GFM
+  math_engine: mathjax
 katex:
   js_path: "assets"  # Path used to search for katex.min.js
   rendering_options:
