--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 highlighter: rouge
 permalink: /blog/:year/:month/:day/:title/
 environment: prod
-url: "http://gregorygundersen.com"  # Sitemap base URL.
+url: "https://baojian.github.io"     # base domain
+baseurl: "/blog"                     # add this line if not already present
 plugins:
   - jekyll-scholar
   - jekyll-sitemap
