--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Debug: show tree & key files
+      - name: "Debug: show tree & key files"
         run: |
           pwd
           ls -la
