--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 highlighter: rouge
-permalink: /blog/:year/:month/:day/:title/
+permalink: /:year/:month/:day/:title/
 environment: prod
 url: "https://baojian.github.io"     # base domain
 plugins:
